ffi/derive/tests/ui_fail/uninhabited_enum.stderr
error: Uninhabited enums are not allowed in FFI
 --> tests/ui_fail/uninhabited_enum.rs:4:10
  |
4 | #[derive(FfiType)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `FfiType` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Uninhabited enums are not allowed in FFI
 --> tests/ui_fail/uninhabited_enum.rs:9:10
  |
9 | #[derive(FfiType)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `FfiType` (in Nightly builds, run with -Z macro-backtrace for more info)
